db/networkpolicy.yaml
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: msql
spec:
  podSelector:
    matchLabels:
      name: mssql-deployment
  ingress:
    - ports:
        - protocol: TCP
          port: 1433
  policyTypes:
    - Ingress
